--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -16,14 +16,14 @@ cabal-version: 2.0
 
 library
   signatures:
-    Diagrams.Final.Sig.Space
-    Diagrams.Final.Sig.Space.TwoD
   exposed-modules:
     Diagrams.Final
     Diagrams.Final.Base
     Diagrams.Final.Envelope
     Diagrams.Final.Measure
     Diagrams.Final.Space
+    Diagrams.Final.Space.Primitive
+    Diagrams.Final.Space.TwoD
     Diagrams.Final.Trace
     Diagrams.Final.Type
   other-modules:
