--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -32,6 +32,7 @@ library
                , adjunctions
                , containers
                , constraints
+               , distributive
                , intervals
                , lens
                , linear
