--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -17,6 +17,7 @@ cabal-version: 2.0
 library
   signatures:
   exposed-modules:
+    Diagrams.Final
     Diagrams.Final.Core
     Diagrams.Final.Core.Base
     Diagrams.Final.Core.Envelope
@@ -26,6 +27,7 @@ library
     Diagrams.Final.Core.Space.TwoD
     Diagrams.Final.Core.Trace
     Diagrams.Final.Core.Type
+    Diagrams.Final.Align
   other-modules:
   other-extensions:
   build-depends: base >=4.11 && <5
