--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -29,6 +29,7 @@ library
     Diagrams.Final.Core.Type
     Diagrams.Final.Align
     Diagrams.Final.Angle
+    Diagrams.Final.Attributes
     Diagrams.Final.Points
   other-modules:
   other-extensions:
