--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -36,6 +36,7 @@ library
   other-extensions:
   build-depends: base >=4.11 && <5
                , adjunctions
+               , colour
                , containers
                , constraints
                , distributive
