--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -35,6 +35,7 @@ library
     Diagrams.Final.Located
     Diagrams.Final.Parametric
     Diagrams.Final.Points
+    Diagrams.Final.Solve
   other-modules:
   other-extensions:
   build-depends: base >=4.11 && <5
