--- a/final-diagrams.cabal
+++ b/final-diagrams.cabal
@@ -37,6 +37,7 @@ library
     Diagrams.Final.Points
     Diagrams.Final.Segment
     Diagrams.Final.Solve
+    Diagrams.Final.Trail.Internal
   other-modules:
   other-extensions:
   build-depends: base >=4.11 && <5
@@ -44,10 +45,13 @@ library
                , colour
                , containers
                , constraints
+               , deepseq
                , distributive
+               , groups
                , intervals
                , lens
                , linear
+               , mono-traversable
                , semigroupoids
   hs-source-dirs: src
   default-language: Haskell2010
